force-app/main/default/objects/sbaa__ApprovalSnapshot__c/fields/sbaa__Approval__c.field-meta.xml
<CustomField>
    <fullName>sbaa__Approval__c</fullName>
    <description>Related Approval for the stored Snapshot</description>
    <inlineHelpText>Related Approval for the stored Snapshot</inlineHelpText>
    <label>Approval</label>
    <referenceTo>sbaa__Approval__c</referenceTo>
    <relationshipLabel>Approval Snapshots</relationshipLabel>
    <relationshipName>ApprovalSnapshot</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>