force-app/main/default/objects/sbaa__ApprovalSnapshot__c/fields/sbaa__ApprovedValueDate__c.field-meta.xml
<CustomField>
    <fullName>sbaa__ApprovedValueDate__c</fullName>
    <description>Date that is captured</description>
    <inlineHelpText>Date that is captured</inlineHelpText>
    <label>Approved Value (Date)</label>
    <type>Date</type>
</CustomField>